Flash: positioning fixed, 100% viewport höhe und overflow scroll

--- a/css/design40/less/messages.less
+++ b/css/design40/less/messages.less
@@ -239,12 +239,14 @@ body > div.login .message{
 
 // Styles for Flash Refactor/new Flash Messages
 #layout_flash_container {
-  position: absolute;
+  position: fixed;
   z-index: @zindex-flash;
   top: 103px; // position below title bar 28px (header) + 32px (menu) + 42.6px (title) (+ 5px padding included in the flash message)
   right: 20px;
   min-width: 30%;
+  height: 100vh;
   animation: fadein .5s;
+  overflow-y: scroll;
 }
 @keyframes hop {
   to  { transform: scale(1.01); }
